rename search-by-overlap to search-by-range, add search-by-overlap